# ESP32-Radio

./: .cproject  .gitignore  .project  .sproject  CMakeLists.txt  README.md  platformio.ini  sloeber.ino.cpp
data/: about.html  config.html  defaultprefs.txt  index.html  mp3play.html  remote.html  search.html
doc/uml/: sm_station.graphml  sm_volume.graphml
include/: SDcard.h  config.h  sm_amp.h  sm_station.h  sm_webctrl.h
src/: about_html.h  config_html.h  defaultprefs.h  index_html.h  main.cpp  mp3play_html.h  remote_html.h  search_html.h  sm_amp.cpp  sm_amp.h  sm_common.h  sm_dial.cpp  sm_dial.h  sm_station.cpp  sm_station.h  sm_webctrl.cpp  sm_webctrl.h
test/: CMakeLists.txt  log.cpp  mock_sm_webctrl.h  test.cpp  test_sm_webctrl_history.cpp  test_sm_webctrl_states_pickup.cpp  test_sm_webctrl_statistics.cpp
test/samples/: basis.txt  debounce.txt  mittel_musik.txt  mittel_sprache.txt  radio_tasten_suchlauf_benutzen.txt  schwach_musik.txt  schwach_sprache.txt  stark_musik.txt  stark_musik2.txt  stark_sprache.txt  ta.txt  ta_tasten_kurz.txt  ta_tasten_lang.txt
tools/: Esp32_radio_init.ino
tools/gpiotest/: test.ino
uml/: sm_dial.graphml  sm_webctrl.graphml
